--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -35,7 +35,7 @@ services:
     command: haproxy
     environment: 
       ETCDCTL_ENDPOINTS: http://10.1.3.19:2379,http://10.1.3.22:2379,http://10.1.3.24:2379
-      PATRONI_ETCD_HOSTS: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
+      PATRONI_ETCD3_HOST: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
       PATRONI_SCOPE: demo
 
   patroni1:
@@ -48,6 +48,6 @@ services:
     container_name: demo-patroni1
     environment:
       ETCDCTL_ENDPOINTS: http://10.1.3.19:2379,http://10.1.3.22:2379,http://10.1.3.24:2379
-      PATRONI_ETCD_HOSTS: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
+      PATRONI_ETCD3_HOST: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
       PATRONI_SCOPE: demo
       PATRONI_NAME: patroni1
