--- a/docker-compose-node2.yml
+++ b/docker-compose-node2.yml
@@ -32,6 +32,6 @@ services:
     container_name: demo-patroni2
     environment:
       ETCDCTL_ENDPOINTS: http://10.1.3.19:2379, http://10.1.3.22:2379, http://10.1.3.24:2379
-      PATRONI_ETCD3_HOSTS: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
+      PATRONI_ETCD3_HOST: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
       PATRONI_SCOPE: demo
       PATRONI_NAME: patroni2
