--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -12,6 +12,8 @@ services:
       - "2380:2380"
     networks: [demo]
     environment:
+      ETCD_NAME: etcd1
+      ETCD_INITIAL_ADVERTISE_PEER_URLS: http://10.1.3.19:2380
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
       ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
       ETCD_INITIAL_CLUSTER_TOKEN: tutorial
@@ -35,11 +37,12 @@ services:
     command: haproxy
     environment: 
       ETCDCTL_ENDPOINTS: http://10.1.3.19:2379,http://10.1.3.22:2379,http://10.1.3.24:2379
-      PATRONI_ETCD3_HOST: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
+      PATRONI_ETCD3_HOSTS: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
       PATRONI_SCOPE: demo
 
   patroni1:
     image: ${PATRONI_TEST_IMAGE:-patroni}
+    restart: unless-stopped
     ports:
       - "8008:8008"
     networks: [demo]
@@ -47,7 +50,9 @@ services:
     hostname: patroni1
     container_name: demo-patroni1
     environment:
+      PATRONI_NAME: patroni1
       ETCDCTL_ENDPOINTS: http://10.1.3.19:2379,http://10.1.3.22:2379,http://10.1.3.24:2379
       PATRONI_ETCD3_HOST: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
+      PATRONI_CONSUL_HOST: http://consul-ip:8500
+      PATRONI_CONSUL_URL: http://consul-ip:8500/v1/
       PATRONI_SCOPE: demo
-      PATRONI_NAME: patroni1
