--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -50,7 +50,7 @@ services:
     environment:
       PATRONI_NAME: patroni1
       ETCDCTL_ENDPOINTS: http://10.1.3.19:2379,http://10.1.3.22:2379,http://10.1.3.24:2379
-      PATRONI_ETCD3_HOST: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
+      PATRONI_ETCD3_HOSTS: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
       PATRONI_CONSUL_HOST: http://consul-ip:8500
       PATRONI_CONSUL_URL: http://consul-ip:8500/v1/
       PATRONI_SCOPE: demo
