--- a/docker-compose-node2.yml
+++ b/docker-compose-node2.yml
@@ -13,14 +13,14 @@ services:
     networks: [demo]
     environment:
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
-      ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379 
+      ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
       ETCD_INITIAL_CLUSTER_TOKEN: tutorial
       ETCD_INITIAL_CLUSTER: etcd1=http://10.1.3.19:2380,etcd2=http://10.1.3.22:2380,etcd3=http://10.1.3.24:2380
       ETCD_INITIAL_CLUSTER_STATE: new
       ETCD_UNSUPPORTED_ARCH: arm64
     container_name: demo-etcd2
     hostname: etcd2
-    command: etcd --name etcd2 --initial-advertise-peer-urls http://10.1.3.22:2380 --advertise-client-urls http://10.1.3.22:2379
+    command: etcd --name etcd2 --initial-advertise-peer-urls http://10.1.3.22:2380 --advertise-client-urls http://10.1.3.22:2379 --listen-client-urls http://10.1.3.22:2379
 
   patroni2:
     image: ${PATRONI_TEST_IMAGE:-patroni}
