--- a/docker-compose-node3.yml
+++ b/docker-compose-node3.yml
@@ -20,7 +20,7 @@ services:
       ETCD_UNSUPPORTED_ARCH: arm64
     container_name: demo-etcd3
     hostname: etcd3
-    command: etcd --name etcd3 --initial-advertise-peer-urls http://10.1.3.24:2380 --advertise-client-urls http://10.1.3.24:2379
+    command: etcd --name etcd3 --initial-advertise-peer-urls http://10.1.3.24:2380 --advertise-client-urls http://10.1.3.24:2379 --listen-client-urls http://10.1.3.24:2379
 
   patroni3:
     image: ${PATRONI_TEST_IMAGE:-patroni}
