--- a/docker-compose-node2.yml
+++ b/docker-compose-node2.yml
@@ -24,6 +24,7 @@ services:
 
   patroni2:
     image: ${PATRONI_TEST_IMAGE:-patroni}
+    restart: unless-stopped
     ports:
       - "8008:8008"
     networks: [demo]
