--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -20,7 +20,7 @@ services:
       ETCD_UNSUPPORTED_ARCH: arm64
     container_name: demo-etcd1
     hostname: etcd1
-    command: etcd --name etcd1 --initial-advertise-peer-urls http://10.1.3.19:2380 --advertise-client-urls http://10.1.3.19:2379
+    # command: etcd --name etcd1 --initial-advertise-peer-urls http://10.1.3.19:2380 --advertise-client-urls http://10.1.3.19:2379
 
   haproxy:
     image: ${PATRONI_TEST_IMAGE:-patroni}
