--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -14,15 +14,13 @@ services:
     environment:
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
       ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
-      ETCD_ADVERTISE_CLIENT_URLS: http://10.1.3.19:2379
-      ETCD_INITIAL_ADVERTISE_PEER_URLS: http://10.1.3.19:2380
       ETCD_INITIAL_CLUSTER_TOKEN: tutorial
       ETCD_INITIAL_CLUSTER: etcd1=http://10.1.3.19:2380,etcd2=http://10.1.3.22:2380,etcd3=http://10.1.3.24:2380
       ETCD_INITIAL_CLUSTER_STATE: new
       ETCD_UNSUPPORTED_ARCH: arm64
     container_name: demo-etcd1
     hostname: etcd1
-    # command: etcd --name etcd1 --initial-advertise-peer-urls http://10.1.3.19:2380 --advertise-client-urls http://10.1.3.19:2379
+    command: etcd --name etcd1 --initial-advertise-peer-urls http://10.1.3.19:2380
 
   haproxy:
     image: ${PATRONI_TEST_IMAGE:-patroni}
