--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "2379:2379"
       - "2380:2380"
-    networks: [demo]
+    networks: demo
     environment:
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
       ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
@@ -24,7 +24,7 @@ services:
 
   haproxy:
     image: ${PATRONI_TEST_IMAGE:-patroni}
-    networks: [demo]
+    networks: demo
     env_file: docker/patroni.env
     hostname: haproxy
     container_name: demo-haproxy
@@ -43,7 +43,7 @@ services:
     restart: unless-stopped
     ports:
       - "8008:8008"
-    networks: [demo]
+    networks: demo
     env_file: docker/patroni.env
     hostname: patroni1
     container_name: demo-patroni1
