--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -12,6 +12,7 @@ services:
       - "2380:2380"
     networks: demo
     environment:
+      ETCD_ADVERTISE_CLIENT_URLS: http://10.1.3.19:2379
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
       ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
       ETCD_INITIAL_CLUSTER_TOKEN: tutorial
