--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "2379:2379"
       - "2380:2380"
-    networks: demo
+    networks: [demo]
     environment:
       ETCD_ADVERTISE_CLIENT_URLS: http://10.1.3.19:2379
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
