--- a/docker-compose-node2.yml
+++ b/docker-compose-node2.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "2379:2379"
       - "2380:2380"
-    networks: demo
+    networks: [demo]
     environment:
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
       ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
@@ -27,7 +27,7 @@ services:
     restart: unless-stopped
     ports:
       - "8008:8008"
-    networks: demo
+    networks: [demo]
     env_file: docker/patroni.env
     hostname: patroni2
     container_name: demo-patroni2
