--- a/docker-compose-node3.yml
+++ b/docker-compose-node3.yml
@@ -13,7 +13,7 @@ services:
     networks: [demo]
     environment:
       ETCD_ADVERTISE_CLIENT_URLS: http://10.1.3.19:2379
-      ETCD_INITIAL_ADVERTISE_PEER_URLS: https://10.1.3.19:2380
+      ETCD_INITIAL_ADVERTISE_PEER_URLS: http://10.1.3.19:2380
       ETCD_INITIAL_CLUSTER: etcd1=http://10.1.3.19:2380,etcd2=http://10.1.3.22:2380,etcd3=http://10.1.3.24:2380
       ETCD_INITIAL_CLUSTER_STATE: new
       ETCD_INITIAL_CLUSTER_TOKEN: tutorial
