--- a/docker-compose-node3.yml
+++ b/docker-compose-node3.yml
@@ -18,7 +18,7 @@ services:
       ETCD_INITIAL_CLUSTER_STATE: new
       ETCD_INITIAL_CLUSTER_TOKEN: tutorial
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
-      ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
+      ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379,http://127.0.0.1:2379
       ETCDCTL_ENDPOINTS: http://10.1.3.19:2379, http://10.1.3.22:2379, http://10.1.3.24:2379
       ETCD_UNSUPPORTED_ARCH: arm64
     container_name: demo-etcd3
