--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -2,8 +2,9 @@ version: "2"
 
 networks:
   demo:
-    config:
-      - subnet: 172.101.0.0/16
+    ipam:
+      config:
+        - subnet: 172.101.0.0/16
 
 services:
   etcd1:
