--- a/docker-compose-node2.yml
+++ b/docker-compose-node2.yml
@@ -2,8 +2,10 @@ version: "2"
 
 networks:
   demo:
-    config:
-      - subnet: 172.102.0.0/16
+    ipam:
+      config:
+        - subnet: 172.102.0.0/16
+
 services:
   etcd2:
     image: ${PATRONI_TEST_IMAGE:-patroni}
