--- a/docker-compose-node2.yml
+++ b/docker-compose-node2.yml
@@ -14,16 +14,17 @@ services:
       - "2379:2379"
       - "2380:2380"
     networks: [demo]
+    ip: "192.102.0.102"
     environment:
       ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
       ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
-      ETCD_INITIAL_CLUSTER: etcd1=http://10.1.3.19:2380,etcd2=http://10.1.3.22:2380,etcd3=http://10.1.3.24:2380
+      ETCD_INITIAL_CLUSTER: etcd1=http://192.101.0.101:2380,etcd2=http://192.102.0.102:2380,etcd3=http://192.103.0.103:2380
       ETCD_INITIAL_CLUSTER_STATE: new
       ETCD_INITIAL_CLUSTER_TOKEN: tutorial
-      ETCD_UNSUPPORTED_ARCH: arm64
+      ETCD_UNSUPPORTED_ARCH: arm64ƒ
     container_name: demo-etcd2
     hostname: etcd2
-    command: etcd --name etcd2 --initial-advertise-peer-urls http://10.1.3.22:2380
+    command: etcd --name etcd2 --initial-advertise-peer-urls http://192.102.0.102:2380
 
   patroni2:
     image: ${PATRONI_TEST_IMAGE:-patroni}
@@ -35,7 +36,7 @@ services:
     hostname: patroni2
     container_name: demo-patroni2
     environment:
-      ETCDCTL_ENDPOINTS: http://10.1.3.19:2379, http://10.1.3.22:2379, http://10.1.3.24:2379
-      PATRONI_ETCD3_HOSTS: "'10.1.3.19:2379','10.1.3.22:2379','10.1.3.24:2379'"
+      ETCDCTL_ENDPOINTS: http://192.101.0.101:2379,http://192.102.0.102:2379,http://192.103.0.103:2379
+      PATRONI_ETCD3_HOSTS: "'192.101.0.101:2379','192.102.0.102:2379','192.103.0.103:2379'"
       PATRONI_SCOPE: demo
       PATRONI_NAME: patroni2
