--- a/docker-compose-node3.yml
+++ b/docker-compose-node3.yml
@@ -1,44 +1,40 @@
-version: "2"
-
-networks:
-  demo:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 192.103.0.0/16
-
 services:
   etcd3:
-    image: ${PATRONI_TEST_IMAGE:-patroni}
-    restart: unless-stopped
-    ports:
-      - "2379:2379"
-      - "2380:2380"
-    networks:
-      demo:
-        ipv4_address: 192.103.0.103
+    image: ${PATRONI_IMAGE:-patroni}
+    network_mode: host
+    extra_hosts:
+      - "etcd1:${IP_HOST1}"
+      - "etcd2:${IP_HOST2}"
+      - "etcd3:${IP_HOST3}"
+      - "patroni1:${IP_HOST1}"
+      - "patroni2:${IP_HOST2}"
+      - "patroni3:${IP_HOST3}"
     environment:
-      ETCD_LISTEN_PEER_URLS: http://0.0.0.0:2380
-      ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
-      ETCD_INITIAL_CLUSTER: etcd1=http://192.101.0.101:2380,etcd2=http://192.102.0.102:2380,etcd3=http://192.103.0.103:2380
-      ETCD_INITIAL_CLUSTER_STATE: new
-      ETCD_INITIAL_CLUSTER_TOKEN: tutorial
-      ETCD_UNSUPPORTED_ARCH: arm64
+      ETCD_LISTEN_PEER_URLS: ${ETCD_LISTEN_PEER_URLS}
+      ETCD_LISTEN_CLIENT_URLS: ${ETCD_LISTEN_CLIENT_URLS}
+      ETCD_INITIAL_CLUSTER: ${ETCD_INITIAL_CLUSTER}
+      ETCD_INITIAL_CLUSTER_STATE: ${ETCD_INITIAL_CLUSTER_STATE}
+      ETCD_INITIAL_CLUSTER_TOKEN: ${ETCD_INITIAL_CLUSTER_TOKEN}
+      ETCD_UNSUPPORTED_ARCH: ${ETCD_UNSUPPORTED_ARCH}
     container_name: demo-etcd3
     hostname: etcd3
-    command: etcd --name etcd3 --initial-advertise-peer-urls http://192.103.0.103:2380
+    command: etcd --name etcd3 --initial-advertise-peer-urls http://etcd3:2380
 
   patroni3:
     image: ${PATRONI_TEST_IMAGE:-patroni}
-    restart: unless-stopped
-    ports:
-      - "8008:8008"
-    networks: [demo]
+    network_mode: host
+    extra_hosts:
+      - "etcd1:${IP_HOST1}"
+      - "etcd2:${IP_HOST2}"
+      - "etcd3:${IP_HOST3}"
+      - "patroni1:${IP_HOST1}"
+      - "patroni2:${IP_HOST2}"
+      - "patroni3:${IP_HOST3}"
     env_file: docker/patroni.env
     hostname: patroni3
     container_name: demo-patroni3
     environment:
-      ETCDCTL_ENDPOINTS: http://192.101.0.101:2379,http://192.102.0.102:2379,http://192.103.0.103:2379
-      PATRONI_ETCD3_HOSTS: "'192.101.0.101:2379','192.102.0.102:2379','192.103.0.103:2379'"
-      PATRONI_SCOPE: demo
-      PATRONI_NAME: patroni3
+      ETCDCTL_ENDPOINTS: ${ETCDCTL_ENDPOINTS}
+      PATRONI_ETCD3_HOSTS: ${PATRONI_ETCD3_HOSTS}
+      PATRONI_SCOPE: ${PATRONI_SCOPE}
+      PATRONI_NAME: ${PATRONI_NAME3}
