--- a/docker-compose-node3.yml
+++ b/docker-compose-node3.yml
@@ -1,6 +1,6 @@
 services:
   etcd3:
-    image: ${PATRONI_TEST_IMAGE:-patroni}
+    image: ${PATRONI_TEST_IMAGE:-patroni03}
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
@@ -21,7 +21,7 @@ services:
     command: etcd --name etcd3 --initial-advertise-peer-urls http://etcd3:2380
 
   patroni3:
-    image: ${PATRONI_TEST_IMAGE:-patroni}
+    image: ${PATRONI_TEST_IMAGE:-patroni03}
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
