--- a/postgres2.yml
+++ b/postgres2.yml
@@ -5,9 +5,9 @@ name: postgresql2
 restapi:
   listen: 127.0.0.1:8010
   connect_address: 127.0.0.1:8010
-#  cafile: /etc/ssl/certs/ssl-cacert-snakeoil.pem
-#  certfile: /etc/ssl/certs/ssl-cert-snakeoil.pem
-#  keyfile: /etc/ssl/private/ssl-cert-snakeoil.key
+  #  cafile: /etc/ssl/certs/ssl-cacert-snakeoil.pem
+  #  certfile: /etc/ssl/certs/ssl-cert-snakeoil.pem
+  #  keyfile: /etc/ssl/private/ssl-cert-snakeoil.key
   authentication:
     username: username
     password: password
@@ -58,43 +58,43 @@ bootstrap:
     postgresql:
       use_pg_rewind: true
       pg_hba:
-      # For kerberos gss based connectivity (discard @.*$)
-      #- host replication replicator 127.0.0.1/32 gss include_realm=0
-      #- host all all 0.0.0.0/0 gss include_realm=0
-      - host replication replicator 127.0.0.1/32 md5
-      - host all all 0.0.0.0/0 md5
+        # For kerberos gss based connectivity (discard @.*$)
+        #- host replication replicator 127.0.0.1/32 gss include_realm=0
+        #- host all all 0.0.0.0/0 gss include_realm=0
+        - host replication replicator 127.0.0.1/32 md5
+        - host all all 0.0.0.0/0 md5
       #  - hostssl all all 0.0.0.0/0 md5
-#      use_slots: true
+      #      use_slots: true
       parameters:
-#        wal_level: hot_standby
-#        hot_standby: "on"
-#        max_connections: 100
-#        max_worker_processes: 8
-#        wal_keep_segments: 8
-#        max_wal_senders: 10
-#        max_replication_slots: 10
-#        max_prepared_transactions: 0
-#        max_locks_per_transaction: 64
-#        wal_log_hints: "on"
-#        track_commit_timestamp: "off"
-#        archive_mode: "on"
-#        archive_timeout: 1800s
-#        archive_command: mkdir -p ../wal_archive && test ! -f ../wal_archive/%f && cp %p ../wal_archive/%f
-#      recovery_conf:
-#        restore_command: cp ../wal_archive/%f %p
+  #        wal_level: hot_standby
+  #        hot_standby: "on"
+  #        max_connections: 100
+  #        max_worker_processes: 8
+  #        wal_keep_segments: 8
+  #        max_wal_senders: 10
+  #        max_replication_slots: 10
+  #        max_prepared_transactions: 0
+  #        max_locks_per_transaction: 64
+  #        wal_log_hints: "on"
+  #        track_commit_timestamp: "off"
+  #        archive_mode: "on"
+  #        archive_timeout: 1800s
+  #        archive_command: mkdir -p ../wal_archive && test ! -f ../wal_archive/%f && cp %p ../wal_archive/%f
+  #      recovery_conf:
+  #        restore_command: cp ../wal_archive/%f %p
 
   # some desired options for 'initdb'
-  initdb:  # Note: It needs to be a list (some options need values, others are switches)
-  - encoding: UTF8
-  - data-checksums
+  initdb: # Note: It needs to be a list (some options need values, others are switches)
+    - encoding: UTF8
+    - data-checksums
 
 postgresql:
   listen: 127.0.0.1:5434
   connect_address: 127.0.0.1:5434
-#  proxy_address: 127.0.0.1:5435  # The address of connection pool (e.g., pgbouncer) running next to Patroni/Postgres. Only for service discovery.
+  #  proxy_address: 127.0.0.1:5435  # The address of connection pool (e.g., pgbouncer) running next to Patroni/Postgres. Only for service discovery.
   data_dir: data/postgresql2
-#  bin_dir:
-#  config_dir:
+  #  bin_dir:
+  #  config_dir:
   pgpass: /tmp/pgpass2
   authentication:
     replication:
@@ -103,18 +103,18 @@ postgresql:
     superuser:
       username: postgres
       password: patroni
-    rewind:  # Has no effect on postgres 10 and lower
+    rewind: # Has no effect on postgres 10 and lower
       username: rewind_user
       password: rewind_password
   # Server side kerberos spn
-#  krbsrvname: postgres
+  #  krbsrvname: postgres
   parameters:
     # Fully qualified kerberos ticket file for the running user
     # same as KRB5CCNAME used by the GSS
-#    krb_server_keyfile: /var/spool/keytabs/postgres
-    unix_socket_directories: '..'  # parent directory of data_dir
+    #    krb_server_keyfile: /var/spool/keytabs/postgres
+    unix_socket_directories: ".." # parent directory of data_dir
 tags:
-    # failover_priority: 1
-    noloadbalance: false
-    clonefrom: false
+  failover_priority: 30
+  noloadbalance: false
+  clonefrom: false
 #    replicatefrom: postgresql1
