--- a/postgres1.yml
+++ b/postgres1.yml
@@ -1,6 +1,6 @@
-scope: batman
-#namespace: /service/
-name: postgresql1
+scope: postgres
+namespace: /pg_cluster/
+name: pg_node2
 
 restapi:
   listen: 127.0.0.1:8009
@@ -57,47 +57,43 @@ bootstrap:
     maximum_lag_on_failover: 1048576
     postgresql:
       use_pg_rewind: true
-      pg_hba:
-      # For kerberos gss based connectivity (discard @.*$)
-      #- host replication replicator 127.0.0.1/32 gss include_realm=0
-      #- host all all 0.0.0.0/0 gss include_realm=0
-      - host replication replicator 127.0.0.1/32 md5
-      - host all all 0.0.0.0/0 md5
-      #  - hostssl all all 0.0.0.0/0 md5
-#      use_slots: true
+      use_slots: true
       parameters:
-#        wal_level: hot_standby
-#        hot_standby: "on"
-#        max_connections: 100
-#        max_worker_processes: 8
-#        wal_keep_segments: 8
-#        max_wal_senders: 10
-#        max_replication_slots: 10
-#        max_prepared_transactions: 0
-#        max_locks_per_transaction: 64
-#        wal_log_hints: "on"
-#        track_commit_timestamp: "off"
-#        archive_mode: "on"
-#        archive_timeout: 1800s
-#        archive_command: mkdir -p ../wal_archive && test ! -f ../wal_archive/%f && cp %p ../wal_archive/%f
-#      recovery_conf:
-#        restore_command: cp ../wal_archive/%f %p
+          wal_level: hot_standby
+          hot_standby: "on"
+          max_connections: 100
+          max_worker_processes: 8
+          wal_keep_segments: 8
+          max_wal_senders: 10
+          max_replication_slots: 10
+          max_prepared_transactions: 0
+          max_locks_per_transaction: 64
+          wal_log_hints: "on"
+          track_commit_timestamp: "off"
+          archive_mode: "on"
+          archive_timeout: 1800s
+          archive_command: mkdir -p ../wal_archive && test ! -f ../wal_archive/%f && cp %p ../wal_archive/%f
+      recovery_conf:
+          restore_command: cp ../wal_archive/%f %p
+  initdb:
+    - encoding: UTF8
+    - data-checksums
 
-  # some desired options for 'initdb'
-  initdb:  # Note: It needs to be a list (some options need values, others are switches)
-  - encoding: UTF8
-  - data-checksums
-
-  # Additional script to be launched after initial cluster creation (will be passed the connection URL as parameter)
-# post_init: /usr/local/bin/setup_cluster.sh
+  pg_hba:
+    - host replication replicator 127.0.0.1/32 md5
+    - host all all 0.0.0.0/0 md5
+  users:
+    admin:
+      password: admin
+      options:
+        - createrole
+        - createdb
 
 postgresql:
   listen: 127.0.0.1:5433
   connect_address: 127.0.0.1:5433
-#  proxy_address: 127.0.0.1:5434  # The address of connection pool (e.g., pgbouncer) running next to Patroni/Postgres. Only for service discovery.
-  data_dir: data/postgresql1
-#  bin_dir:
-#  config_dir:
+  data_dir: /var/lib/pgsql/14/data
+  bin_dir: /usr/pgsql-14/bin
   pgpass: /tmp/pgpass1
   authentication:
     replication:
@@ -106,24 +102,24 @@ postgresql:
     superuser:
       username: postgres
       password: patroni
-    rewind:  # Has no effect on postgres 10 and lower
+    rewind:
       username: rewind_user
       password: rewind_password
   # Server side kerberos spn
-#  krbsrvname: postgres
+  #  krbsrvname: postgres
   parameters:
     # Fully qualified kerberos ticket file for the running user
     # same as KRB5CCNAME used by the GSS
-#    krb_server_keyfile: /var/spool/keytabs/postgres
-    unix_socket_directories: '..'  # parent directory of data_dir
-  basebackup:
-      - verbose
-      - max-rate: 100M
+    #    krb_server_keyfile: /var/spool/keytabs/postgres
+    unix_socket_directories: ".." # parent directory of data_dir
+#  basebackup:
+#    - verbose
+#    - max-rate: 100M
 #      - waldir: /pg-wal-mount/external-waldir # only needed in case pg_wal is symlinked outside of data_dir
-  # Additional fencing script executed after acquiring the leader lock but before promoting the replica
-  #pre_promote: /path/to/pre_promote.sh
+# Additional fencing script executed after acquiring the leader lock but before promoting the replica
+#pre_promote: /path/to/pre_promote.sh
 
 tags:
-    # failover_priority: 1
-    noloadbalance: false
-    clonefrom: false
+  failover_priority: 10
+  noloadbalance: false
+  clonefrom: false
