--- a/HAProxy/docker-compose.yml
+++ b/HAProxy/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3.9"
+version: "2"
 
 services:
   haproxy:
-    image: haproxy:2.7
+    image: ${PATRONI_TEST_IMAGE:-patroni}
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
@@ -11,16 +11,14 @@ services:
       - "patroni1:10.1.3.19"
       - "patroni2:10.1.3.22"
       - "patroni3:10.1.3.24"
-    volumes:
-      - ./haproxy:/haproxy-override
-      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-    links:
-      - etcd1
-      - etcd2
-      - etcd3
-      - patroni1
-      - patroni2
-      - patroni3
+    env_file: docker/patroni.env
+    hostname: haproxy
+    container_name: demo-haproxy
     ports:
-      - "80:80"
-      - "70:70" # haproxy admin console, login with user:pass
+      - "5000:5000"
+      - "5001:5001"
+    command: haproxy
+    environment: &haproxy_env
+      ETCDCTL_ENDPOINTS: http://etcd1:2379,http://etcd2:2379,http://etcd3:2379
+      PATRONI_ETCD3_HOSTS: "'etcd1:2379','etcd2:2379','etcd3:2379'"
+      PATRONI_SCOPE: demo
