--- a/HAProxy/docker-compose.yml
+++ b/HAProxy/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - "patroni1:10.1.3.19"
       - "patroni2:10.1.3.22"
       - "patroni3:10.1.3.24"
-    env_file: docker/patroni.env
+    env_file: ../docker/patroni.env
+
     hostname: haproxy
     container_name: demo-haproxy
     ports:
