--- a/HAProxy/docker-compose.yml
+++ b/HAProxy/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   haproxy:
-    image: ${PATRONI_TEST_IMAGE:-patroni}
+    image: ${PATRONI_TEST_IMAGE:-patroni01}
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
@@ -17,7 +17,7 @@ services:
     ports:
       - "5000:5000"
       - "5001:5001"
-      - "7005:7000"
+      - "7000:7000"
     command: haproxy
     environment: &haproxy_env
       ETCDCTL_ENDPOINTS: http://etcd1:2379,http://etcd2:2379,http://etcd3:2379
