--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -1,6 +1,6 @@
 services:
   etcd1: &etcd
-    image: ${PATRONI_TEST_IMAGE:-patroni}
+    image: ${PATRONI_TEST_IMAGE:-patroni1}
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
@@ -21,7 +21,7 @@ services:
     command: etcd --name etcd1 --initial-advertise-peer-urls http://etcd1:2380
 
   patroni1:
-    image: ${PATRONI_TEST_IMAGE:-patroni}
+    image: ${PATRONI_TEST_IMAGE:-patroni1}
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
