--- a/docker-compose-node2.yml
+++ b/docker-compose-node2.yml
@@ -1,6 +1,6 @@
 services:
   etcd2:
-    image: ${PATRONI_TEST_IMAGE:-patroni}
+    image: ${PATRONI_TEST_IMAGE:-patroni2}
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
@@ -21,7 +21,7 @@ services:
     command: etcd --name etcd2 --initial-advertise-peer-urls http://etcd2:2380
 
   patroni2:
-    image: ${PATRONI_TEST_IMAGE:-patroni}
+    image: ${PATRONI_TEST_IMAGE:-patroni2}
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
