--- a/docker-compose-node1.yml
+++ b/docker-compose-node1.yml
@@ -2,6 +2,7 @@ services:
   etcd1: &etcd
     image: ${PATRONI_TEST_IMAGE:-patroni1}
     network_mode: host
+    restart: unless-stopped
     extra_hosts:
       - "etcd1:10.1.3.19"
       - "etcd2:10.1.3.22"
@@ -22,6 +23,7 @@ services:
 
   patroni1:
     image: ${PATRONI_TEST_IMAGE:-patroni1}
+    restart: unless-stopped
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
