--- a/docker-compose-node2.yml
+++ b/docker-compose-node2.yml
@@ -1,6 +1,7 @@
 services:
   etcd2:
     image: ${PATRONI_TEST_IMAGE:-patroni2}
+    restart: unless-stopped
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
@@ -22,6 +23,7 @@ services:
 
   patroni2:
     image: ${PATRONI_TEST_IMAGE:-patroni2}
+    restart: unless-stopped
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
