--- a/docker-compose-node3.yml
+++ b/docker-compose-node3.yml
@@ -1,6 +1,7 @@
 services:
   etcd3:
     image: ${PATRONI_TEST_IMAGE:-patroni3}
+    restart: unless-stopped
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
@@ -22,6 +23,7 @@ services:
 
   patroni3:
     image: ${PATRONI_TEST_IMAGE:-patroni3}
+    restart: unless-stopped
     network_mode: host
     extra_hosts:
       - "etcd1:10.1.3.19"
