--- a/postgres0.yml
+++ b/postgres0.yml
@@ -51,8 +51,9 @@ bootstrap:
 postgresql:
   listen: 127.0.0.1:5432
   connect_address: 127.0.0.1:5432
-  data_dir: /var/lib/pgsql/14/data/postgresql0
-  bin_dir: /usr/pgsql-14/bin/postgresql0
+  data_dir: data/postgresql0
+  #  bin_dir:
+  #  config_dir:  
   pgpass: /tmp/pgpass0
   authentication:
     replication:
