--- a/postgres1.yml
+++ b/postgres1.yml
@@ -51,8 +51,9 @@ bootstrap:
 postgresql:
   listen: 127.0.0.1:5433
   connect_address: 127.0.0.1:5433
-  data_dir: /var/lib/pgsql/14/data/postgresql1
-  bin_dir: /usr/pgsql-14/bin/postgresql1
+  data_dir: data/postgresql1
+  #  bin_dir:
+  #  config_dir:
   pgpass: /tmp/pgpass1
   authentication:
     replication:
