--- a/postgres2.yml
+++ b/postgres2.yml
@@ -51,8 +51,9 @@ bootstrap:
 postgresql:
   listen: 127.0.0.1:5434
   connect_address: 127.0.0.1:5434
-  data_dir: /var/lib/pgsql/14/data/postgresql2
-  bin_dir: /usr/pgsql-14/bin/postgresql2
+  data_dir: data/postgresql2
+  #  bin_dir:
+  #  config_dir:
   pgpass: /tmp/pgpass2
   authentication:
     replication:
